tdf#149524: fix crash in Writer after a label has just been created

see bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=180683

Change-Id: Iba461ffe65392a7e0e779f68d1f0737a444ae724
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135675
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit d9f716c48085ed46c1af31244583d67882cc94ec)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135993